# OpenPulse

./: .gitignore  AUTHORS.txt  C0_TB2N.py  CONTRIBUTING.md  LICENSE.md  README.md  assembly.py  boundaryconditions.py  element.py  environment.yml  main.py  main_BFS_test.py  main_acoustic.py  material.py  material_library (1).py  material_library.py  node.py  openpulse.spec  openpulse.yml  plot_results.py  pulsation_excitation.py  pulse.iss  pulse.py  pulse.spec  pyproject.toml  requirements.txt  run.py  run.spec  setup.py  storedata.py  tab_sort_script.py  test.py  test_compressor.py  teste.py  teste.txt  teste_linha.msh  teste_msh.py  tube.py  widget_out.py
.github/workflows/: build.yml  build_win.yml  create_releases.yml
.qt_for_python/uic/: PerforatedPlateInput copy.py  PerforatedPlateInput.py  aboutOpenPulseInput.py  acousticElementTypeInput.py  acousticpressureInput.py  analysisSetupInput_HarmonicAnalysisDirectMethod.py  analysisSetupInput_HarmonicAnalysisModeSuperpositionMethod.py  animationSettingsInput.py  beamXaxisRotationInput.py  callDoubleConfirmationInput.py  compressorModelInput.py  crossSectionInput.py  dofInput.py  elasticNodalLinksInput.py  expansionJointInput.py  flangesInput.py  fluidlnput.py  getDoubleConfirmationInput.py  getExpansionJointInformationInput.py  getGroupInformationInput.py  getGroupInformationPerforatedPlate.py  getStarted.py  loadsInput.py  meshSetupVisibilityInput.py  newProjectInput.py  plotAcousticFrequencyResponseInput.py  plotAcousticModeShapeInput.py  plotAcousticPressureFieldInput.py  plotDisplacementFieldInput.py  plotReactionsInput.py  plotSectionInput.py  plotStressFrequencyResponseInput.py  plotStructuralFrequencyResponseInput.py  plotStructuralModeShapeInput.py  plot_TL_NR_Input.py  printMessages.py  radiationImpedanceInput.py  rendererUserPreferencesInput.py  resetProjectInput.py  runAnalysisInput.py  (+10 more)
Animate/: MS_Animation.py
Examples/Elementary_matrices/: Ke.txt  Me.txt
Examples/Material/: material_library.py
SCRIPTS/: FETM_example_2.py  FETM_example_2_Z.py  assembly_V1_n_elementos.py  branches_V1.py  test_geom_2_branch1_out_equal_d.txt  test_geom_2_branch1_out_equal_d_Z.txt  test_geom_2_branch2_out_equal_d.txt  test_geom_2_branch2_out_equal_d_Z.txt  test_geom_2_branch3_out_equal_d.txt  test_geom_2_branch3_out_equal_d_Z.txt  test_geom_2_out_equal_d.txt  test_geom_2_out_equal_d_Z.txt  test_geom_2_pout_equal_d.txt  test_geom_2_pout_equal_d_Z.txt  tmm.py
SCRIPTS/functions/: plot_results.py
doc/: Untitled Diagram.drawio  make.bat  openpulse_uml_diagram.drawio
doc/source/: conf.py  index.rst
examples/: LINHA_1.step
examples/2D_mesh_generator/: teapot.iges  teste_gmsh.py
examples/Signals/: pulsation_excitation.py  signal_processing.py
examples/Tables/: table_generator.py
examples/analysis_from_dat_file/: main.py
examples/animate/: MS_Animation.py
examples/animation/: plot_function.py
examples/compressor_excitation/: cylinder_v2.py
examples/geometry/: TESTE_M3D_2.iges
examples/get_global_matrices/: main.py
examples/get_mesh_from_3d/: LINHA_1.iges  TESTE_M3D.iges  main.py
examples/iges_files/: example_2_modified.iges
examples/matplotlib/: Pipe_plot.py  data_process.py  mode_shape_plot.py  pipe_plot3D.py
examples/plot_frf/: main.py
examples/setup_mesh/: main.py
fem_mesh/: .gitignore  fem_mesh.py  main.py  unv_reader.py
pulse/: __init__.py  __main__.py  default_libraries.py  entity.py  launch.py  launcher.py  left_menu_widget.ui  mesh.py  project.py  projectFile.py  project_file.py  pulse.py  run.py  standard_cross_sections_libraries.py  test.py  teste_dict.py  utils.py
scripts/: build_for_linux.sh  build_for_windows.bat
sparse/: MS_Animation.py  TB_Matrices.py  TB_Matrices_segment.py  TB_Matrices_sparse.py  main.py
tests/: __init__.py  cylinder.py  test_assembly.py  test_beam1_elementary_matrices.py  test_compressor.py  test_coupled_harmonic_analysis.py  test_load_a_project.py  test_load_project.py  test_reciprocating_compressor.py  test_reciprocating_pump.py  test_reciprocating_pump_excitation_analysis.py  test_script_mode.py  test_structural_modal_analysis.py  test_structural_solution.py
(+1634 files in other folders)
