[tool.poetry]
name = "pulse"
version = "2.0.3"
description = "Open Source Software for Pulsation Analysis of Pipeline Systems"
authors = [
    "Olavo Silva <olavus@gmail.com>",
    "Jacson Gil Vargas <jgvargasemc@gmail.com>",
    "André Fernandes <fpf.andre@gmail.com>",
    "Danilo Espindola <daniloespindola.grad@gmail.com>",
    "Vitor Voigt Slongo <v.v.slongo@gmail.com>",
    "Rodrigo Schwartz <rodrigo32003@gmail.com>",
    "Gildean Almeida <gildean185@gmail.com>",
    "Fabrício Cruz <fabricioemanuelcruzz@gmail.com>"
]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyqt5-qt5 = "5.15.2"
PyQt5 = "^5.15.9"
vtk = "^9.2.6"
numpy = "^1.25.2"
scipy = "^1.11.2"
matplotlib = "^3.7.2"
gmsh = "^4.11.1"
ctREFPROP = "^0.10.2"
pandas = "^2.1.0"
openpyxl = "^3.1.2"
h5py = "^3.9.0"
opps = {git = "https://github.com/open-pulse/opps"}
compressors = {git = "https://github.com/MOPT-UFSC/Compressors"}
molde = {git = "https://github.com/andrefpf/molde"}
pypardiso = {git = "https://github.com/MOPT-UFSC/PyPardiso"}
fileboxes = "^0.1.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
pytest = "^7.4.1"
pyinstaller = "^6.4.0"
tuna = "^0.5.11"

[tool.poetry.scripts]
pulse = "pulse.launch:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
