[tool.poetry]
name = "pulse"
version = "2.0.11"
description = "Open Source Software for Pulsation Analysis of Pipeline Systems"
authors = [
    "Olavo Silva <olavus@gmail.com>",
    "Jacson Gil Vargas <jgvargasemc@gmail.com>",
    "André Fernandes <fpf.andre@gmail.com>",
    "Danilo Espindola <daniloespindola.grad@gmail.com>",
    "Vitor Voigt Slongo <v.v.slongo@gmail.com>",
    "Rodrigo Schwartz <rodrigo32003@gmail.com>",
    "Gildean Almeida <gildean185@gmail.com>",
    "Fabrício Cruz <fabricioemanuelcruzz@gmail.com>"
]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
vtk = "^9.4.0"
numpy = "^2.1.2"
scipy = "^1.11.2"
matplotlib = "^3.7.2"
gmsh = "^4.13.1"
ctREFPROP = "^0.10.2"
pandas = "^2.1.0"
openpyxl = "^3.1.2"
h5py = "^3.12.1"
molde = {git = "https://github.com/andrefpf/molde", branch = "update_dependencies", python = ">=3.10"}
pyqtdarktheme = {version = "^2.1.0", python = ">=3.10,<3.12"}
fileboxes = "^0.1.4"
ordered-set = "^4.1.0"
pypardiso-mopt = "^0.1.0"
pyside6 = "^6.8.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"
pytest = "^7.4.1"
pyinstaller = {version = "^6.4.0", python = ">=3.10,<3.14"}
tuna = "^0.5.11"

[tool.poetry.scripts]
pulse = "pulse.launch:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
